<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/log_out_menu_item"
        android:title="@string/authentication_log_out"
        app:showAsAction="ifRoom"
        android:icon="@drawable/log_out">
    </item>

    <item
        android:id="@+id/change_language_menu_item"
        android:title="@string/menu_change_language"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_change_language">
    </item>

    <item
        android:id="@+id/catalog_menu_item"
        android:title="@string/menu_catalog">
        <menu>
            <item
                android:id="@+id/component_catalog_menu_item"
                android:title="@string/menu_component_catalog">
            </item>

            <item
                android:id="@+id/construction_catalog_menu_item"
                android:title="@string/menu_construction_catalog">
            </item>
        </menu>
    </item>

    <item
        android:id="@+id/cart_menu_item"
        android:title="@string/menu_cart">
    </item>

    <item
        android:id="@+id/constructor_menu_item"
        android:title="@string/menu_furniture_constructor">
    </item>

    <item
        android:id="@+id/instructions_menu_item"
        android:title="@string/menu_assembling_instructions">
    </item>
</menu>