<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.functional.Cart">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView36"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/cart_name" />

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="@string/cart_count" />

                <TextView
                    android:id="@+id/textView43"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="@string/cart_unit_of_goods_price" />

                <TextView
                    android:id="@+id/textView44"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cart_sum" />

                <TextView
                    android:id="@+id/textView45"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="@string/cart_delete" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textView46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/cart_total"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tableLayout"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text=""
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView46"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <Button
            android:id="@+id/button7"
            android:layout_width="102dp"
            android:layout_height="37dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#970C21"
            android:onClick="emptyCart"
            android:text="@string/cart_empty"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView46" />

        <Button
            android:id="@+id/button10"
            android:layout_width="122dp"
            android:layout_height="38dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#1C86A6"
            android:onClick="commitCartContentChanging"
            android:text="@string/cart_confirm"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/textView47" />

        <Button
            android:id="@+id/button11"
            android:layout_width="100dp"
            android:layout_height="38dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#8BC34A"
            android:text="@string/cart_pay"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/textView47" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>