<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.functional.FurnitureConstructor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="381dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/matching_new_constructions_available_constructions"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="381dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/matching_new_constructions_available_components"
                android:textSize="16sp"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/spinner2"
                tools:layout_editor_absoluteX="16dp" />

            <Spinner
                android:id="@+id/spinner2"
                style="@style/spinner_style"
                android:layout_width="192dp"
                android:layout_height="37dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView33" />

            <Spinner
                android:id="@+id/spinner3"
                style="@style/spinner_style"
                android:layout_width="192dp"
                android:layout_height="37dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView34" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:minHeight="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView49">


                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/buttonContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:alignContent="stretch"
                    app:alignItems="stretch"
                    app:flexWrap="wrap">

                </com.google.android.flexbox.FlexboxLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:onClick="emptyCanvas"
                android:id="@+id/button5"
                android:layout_width="138dp"
                android:layout_height="46dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="16dp"
                android:text="@string/matching_new_constructions_clear"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:background="#F3D83225"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <Button
                android:id="@+id/button6"
                android:layout_width="138dp"
                android:layout_height="46dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="16dp"
                android:text="@string/matching_new_constructions_search"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toEndOf="@+id/button5"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <LinearLayout
                android:layout_width="410dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button5">

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=
                        "@string/matching_new_constructions_nothing_found"
                    android:textColor="#CC1818"
                    android:layout_marginTop="20dp"
                    android:textSize="16sp"
                    android:visibility="gone"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=
                        "@string/matching_new_constructions_appropriate_constructions"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"
                    android:textAlignment="center" />

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/appropriate_slider"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    app:iss_auto_cycle="true"
                    app:iss_delay="0"
                    android:layout_marginTop="12dp"
                    android:visibility="gone"
                    app:iss_period="2000" />

                <TextView
                    android:id="@+id/textView38"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"
                    android:text=
                        "@string/matching_new_constructions_almost_appropriate_constructions" />

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/almost_appropriate_slider"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="12dp"
                    app:iss_auto_cycle="true"
                    app:iss_delay="0"
                    android:visibility="gone"
                    app:iss_period="2000" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView49"
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:text="@string/matching_new_constructions_chosen_components_description_part1"
                android:textSize="16sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/spinner3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>